// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookSearch|BookInfo Borrowed 1`] = `
<div
  className="sc-bdVaJa jHigDz"
  direction="row"
>
  <div
    className="sc-bwzfXH hzsOqB"
  >
    <img
      alt="Java Script"
      src="http://books.google.com/books/content?id=RDqQXFA42-kC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
    />
  </div>
  <div
    className="sc-bwzfXH ZDnmd"
  >
    <div
      className="sc-bZQynM sc-kAzzGY lcCXOR"
    >
      Java Script
    </div>
     
    <br />
    <div
      className="sc-bZQynM sc-chPdSV dQBsaT"
    >
      デイビッドフラナガン
    </div>
    <ul
      className="sc-htoDjs jkpzWr"
    >
      <li
        className="sc-dnqmqq esxTgD"
      >
        <div
          className="sc-bdVaJa fAMUFK"
          direction="row"
        >
          <div
            className="sc-bZQynM sc-cSHVUG gJOclo"
          >
            東京都荒川区
          </div>
          <div
            className="sc-bwzfXH jNEOnr"
          >
            <a
              className="sc-iwsKbI sc-kgoBCf gScQmU"
              href=""
              rel="noreferrer noopener"
              target="_blank"
            >
              貸出中
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots BookSearch|BookInfo Defatul Component 1`] = `
<div
  className="sc-bdVaJa jHigDz"
  direction="row"
>
  <div
    className="sc-bwzfXH hzsOqB"
  >
    <img
      alt="Java Script"
      src="http://books.google.com/books/content?id=RDqQXFA42-kC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
    />
  </div>
  <div
    className="sc-bwzfXH ZDnmd"
  >
    <div
      className="sc-bZQynM sc-kAzzGY lcCXOR"
    >
      Java Script
    </div>
     
    <br />
    <div
      className="sc-bZQynM sc-chPdSV dQBsaT"
    >
      デイビッドフラナガン
    </div>
    <ul
      className="sc-htoDjs jkpzWr"
    >
      <li
        className="sc-dnqmqq esxTgD"
      >
        <div
          className="sc-bdVaJa fAMUFK"
          direction="row"
        >
          <div
            className="sc-bZQynM sc-cSHVUG gJOclo"
          >
            東京都荒川区
          </div>
          <div
            className="sc-bwzfXH jNEOnr"
          >
            <a
              className="sc-iwsKbI sc-kgoBCf gScQmU"
              href=""
              rel="noreferrer noopener"
              target="_blank"
            >
              貸出可
            </a>
          </div>
        </div>
      </li>
      <li
        className="sc-dnqmqq esxTgD"
      >
        <div
          className="sc-bdVaJa fAMUFK"
          direction="row"
        >
          <div
            className="sc-bZQynM sc-cSHVUG gJOclo"
          >
            東京都文京区
          </div>
          <div
            className="sc-bwzfXH jNEOnr"
          >
            <a
              className="sc-iwsKbI sc-kgoBCf gScQmU"
              href="https://www.library.city.kita.tokyo.jp/opac/OPP1500?SELDATA=TOSHO&SSNO=3-0002838076"
              rel="noreferrer noopener"
              target="_blank"
            >
              貸出中
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots BookSearch|BookInfo Not Owned 1`] = `
<div
  className="sc-bdVaJa jHigDz"
  direction="row"
>
  <div
    className="sc-bwzfXH hzsOqB"
  >
    <img
      alt="Java Script"
      src="http://books.google.com/books/content?id=RDqQXFA42-kC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
    />
  </div>
  <div
    className="sc-bwzfXH ZDnmd"
  >
    <div
      className="sc-bZQynM sc-kAzzGY lcCXOR"
    >
      Java Script
    </div>
     
    <br />
    <div
      className="sc-bZQynM sc-chPdSV dQBsaT"
    >
      デイビッドフラナガン
    </div>
    <ul
      className="sc-htoDjs jkpzWr"
    >
      <li
        className="sc-dnqmqq esxTgD"
      >
        <div
          className="sc-bdVaJa fAMUFK"
          direction="row"
        >
          <div
            className="sc-bZQynM sc-cSHVUG gJOclo"
          >
            東京都荒川区
          </div>
          <div
            className="sc-bwzfXH jNEOnr"
          >
            <div
              className="sc-bZQynM fkcafR"
            >
              蔵書なし
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots BookSearch|BookInfoList Default Component 1`] = `
<div
  className="sc-bdVaJa PpCBN"
  direction="row"
>
  <div
    className="sc-bwzfXH egmfvw"
  >
    <div
      className="sc-bdVaJa hoToyJ"
      direction="column"
    >
      <div
        className="sc-bwzfXH BzPPN"
      >
        <ul
          className="sc-htoDjs sc-kGXeez eDcfdo"
        >
          <li
            className="sc-dnqmqq esxTgD"
          >
            <div
              className="sc-bdVaJa jHigDz"
              direction="row"
            >
              <div
                className="sc-bwzfXH hzsOqB"
              >
                <img
                  alt="Java Script"
                  src="http://books.google.com/books/content?id=RDqQXFA42-kC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
                />
              </div>
              <div
                className="sc-bwzfXH ZDnmd"
              >
                <div
                  className="sc-bZQynM sc-kAzzGY lcCXOR"
                >
                  Java Script
                </div>
                 
                <br />
                <div
                  className="sc-bZQynM sc-chPdSV dQBsaT"
                >
                  デイビッドフラナガン, TK
                </div>
                <ul
                  className="sc-htoDjs jkpzWr"
                >
                  <li
                    className="sc-dnqmqq esxTgD"
                  >
                    <div
                      className="sc-bdVaJa fAMUFK"
                      direction="row"
                    >
                      <div
                        className="sc-bZQynM sc-cSHVUG gJOclo"
                      >
                        東京都荒川区
                      </div>
                      <div
                        className="sc-bwzfXH jNEOnr"
                      >
                        <a
                          className="sc-iwsKbI sc-kgoBCf gScQmU"
                          href=""
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          貸出可
                        </a>
                      </div>
                    </div>
                  </li>
                  <li
                    className="sc-dnqmqq esxTgD"
                  >
                    <div
                      className="sc-bdVaJa fAMUFK"
                      direction="row"
                    >
                      <div
                        className="sc-bZQynM sc-cSHVUG gJOclo"
                      >
                        東京都文京区
                      </div>
                      <div
                        className="sc-bwzfXH jNEOnr"
                      >
                        <a
                          className="sc-iwsKbI sc-kgoBCf gScQmU"
                          href="https://www.library.city.kita.tokyo.jp/opac/OPP1500?SELDATA=TOSHO&SSNO=3-0002838076"
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          貸出中
                        </a>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <hr />
          </li>
          <li
            className="sc-dnqmqq esxTgD"
          >
            <div
              className="sc-bdVaJa jHigDz"
              direction="row"
            >
              <div
                className="sc-bwzfXH hzsOqB"
              >
                <img
                  alt="よくわかるJavaScriptの教科書"
                  src="http://books.google.com/books/content?id=ZpyK8u2kndAC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
                />
              </div>
              <div
                className="sc-bwzfXH ZDnmd"
              >
                <div
                  className="sc-bZQynM sc-kAzzGY lcCXOR"
                >
                  よくわかるJavaScriptの教科書
                </div>
                 
                <br />
                <div
                  className="sc-bZQynM sc-chPdSV dQBsaT"
                >
                  たにぐちまこと
                </div>
                <ul
                  className="sc-htoDjs jkpzWr"
                >
                  <li
                    className="sc-dnqmqq esxTgD"
                  >
                    <div
                      className="sc-bdVaJa fAMUFK"
                      direction="row"
                    >
                      <div
                        className="sc-bZQynM sc-cSHVUG gJOclo"
                      >
                        東京都荒川区
                      </div>
                      <div
                        className="sc-bwzfXH jNEOnr"
                      >
                        <div
                          className="sc-bZQynM fkcafR"
                        >
                          蔵書なし
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    className="sc-dnqmqq esxTgD"
                  >
                    <div
                      className="sc-bdVaJa fAMUFK"
                      direction="row"
                    >
                      <div
                        className="sc-bZQynM sc-cSHVUG gJOclo"
                      >
                        東京都文京区
                      </div>
                      <div
                        className="sc-bwzfXH jNEOnr"
                      >
                        <a
                          className="sc-iwsKbI sc-kgoBCf gScQmU"
                          href="https://www.library.city.kita.tokyo.jp/opac/OPP1500?SELDATA=TOSHO&SSNO=3-0003041563"
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          貸出可
                        </a>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <hr />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookSearch|BookInfoList Search Error 1`] = `
<div
  className="sc-bZQynM rUHxE"
>
  検索に失敗しました
</div>
`;

exports[`Storyshots BookSearch|BookInfoList Searching 1`] = `
<div
  className="sc-bdVaJa cnQvIG"
  direction="row"
>
  <div
    className="loader"
  >
    Loading...
  </div>
</div>
`;

exports[`Storyshots Header|AppHeader Default Component 1`] = `
<div
  className="sc-bwzfXH bHBVwB"
>
  <div
    className="sc-bdVaJa cnQvIG"
    direction="row"
  >
    <div
      className="sc-bZQynM sc-gzVnrw dqVlIO"
    >
      図書館検索
    </div>
    <div
      className="sc-bwzfXH krLZqb"
    >
      <div
        className="sc-bdVaJa cnQvIG"
        direction="row"
      >
        <form
          className="sc-htpNat hlgWSp"
        >
          <input
            className="sc-bxivhb cHgFSx"
            onChange={[Function]}
            placeholder="キーワードを入力"
            type="text"
            value=""
          />
          <button
            className="sc-ifAKCX bIeZPV"
            onClick={[Function]}
          >
            <img
              alt="検索ボタン"
              className="sc-EHOje fBpHNR"
              src="search-icon-white.png"
            />
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header|SearchBar Default Component 1`] = `
<div
  style={
    Object {
      "backgroundColor": "gray",
      "padding": "10px",
    }
  }
>
  <div
    className="sc-bwzfXH krLZqb"
  >
    <div
      className="sc-bdVaJa cnQvIG"
      direction="row"
    >
      <form
        className="sc-htpNat hlgWSp"
      >
        <input
          className="sc-bxivhb cHgFSx"
          onChange={[Function]}
          placeholder="キーワードを入力"
          type="text"
          value=""
        />
        <button
          className="sc-ifAKCX bIeZPV"
          onClick={[Function]}
        >
          <img
            alt="検索ボタン"
            className="sc-EHOje fBpHNR"
            src="search-icon-white.png"
          />
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots LibrarySearch|LibraryList Default Component 1`] = `
<div
  className="sc-bwzfXH kLBebE"
>
  <ul
    className="sc-htoDjs jkpzWr"
  >
    <li
      className="sc-dnqmqq sc-dxgOiQ RsSl"
    >
      <div
        className="sc-bdVaJa cnQvIG"
        direction="row"
      >
        <div
          className="sc-bdVaJa beqaBA"
          direction="column"
        >
          <a
            className="sc-iwsKbI sc-ckVGcZ gohago"
            href="https://www.library.city.arakawa.tokyo.jp/"
          >
            東京都荒川区
          </a>
          <div
            className="sc-bZQynM sc-jKJlTe jZKENB"
          >
            汐入図書SS, 町屋図書館
          </div>
        </div>
        <button
          className="sc-gZMcBi sc-eNQAEJ qxmAF"
          disabled={true}
        >
          登録済み
        </button>
      </div>
    </li>
    <li
      className="sc-dnqmqq sc-dxgOiQ RsSl"
    >
      <div
        className="sc-bdVaJa cnQvIG"
        direction="row"
      >
        <div
          className="sc-bdVaJa beqaBA"
          direction="column"
        >
          <a
            className="sc-iwsKbI sc-ckVGcZ gohago"
            href="http://www.lib.city.bunkyo.tokyo.jp/"
          >
            東京都文京区
          </a>
          <div
            className="sc-bZQynM sc-jKJlTe jZKENB"
          >
            千石図書館, 小石川図書館
          </div>
        </div>
        <button
          className="sc-gZMcBi sc-eNQAEJ qxmAF"
          disabled={true}
        >
          登録済み
        </button>
      </div>
    </li>
    <li
      className="sc-dnqmqq sc-dxgOiQ RsSl"
    >
      <div
        className="sc-bdVaJa cnQvIG"
        direction="row"
      >
        <div
          className="sc-bdVaJa beqaBA"
          direction="column"
        >
          <a
            className="sc-iwsKbI sc-ckVGcZ gohago"
            href="http://www.kodomo.go.jp/"
          >
            国立国会図書館
          </a>
          <div
            className="sc-bZQynM sc-jKJlTe jZKENB"
          >
            子ども図書館
          </div>
        </div>
        <button
          className="sc-gZMcBi sc-eNQAEJ cwlAve"
          onClick={[Function]}
        >
          登録
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots LibrarySearch|LibraryList No Library 1`] = `
<div
  className="sc-bwzfXH kLBebE"
>
  <div
    className="sc-bZQynM sc-kpOJdX cqwrL"
  >
    検索結果が0件です
  </div>
</div>
`;

exports[`Storyshots LibrarySearch|LibraryRegistrationPanel Default Component 1`] = `
<div
  className="sc-bdVaJa PpCBN"
  direction="row"
>
  <div
    className="sc-bwzfXH UFcNM"
  >
    <div
      className="sc-bdVaJa hoToyJ"
      direction="column"
    >
      <div
        className="sc-bwzfXH kLBebE"
      >
        <div
          className="sc-bdVaJa cnQvIG"
          direction="row"
        >
          <select
            className="sc-hMqMXs dBMuSP"
            onChange={[Function]}
            value="東京都"
          >
            <option
              value="北海道"
            >
              北海道
            </option>
            <option
              value="青森県"
            >
              青森県
            </option>
            <option
              value="岩手県"
            >
              岩手県
            </option>
            <option
              value="宮城県"
            >
              宮城県
            </option>
            <option
              value="秋田県"
            >
              秋田県
            </option>
            <option
              value="山形県"
            >
              山形県
            </option>
            <option
              value="福島県"
            >
              福島県
            </option>
            <option
              value="茨城県"
            >
              茨城県
            </option>
            <option
              value="栃木県"
            >
              栃木県
            </option>
            <option
              value="群馬県"
            >
              群馬県
            </option>
            <option
              value="埼玉県"
            >
              埼玉県
            </option>
            <option
              value="千葉県"
            >
              千葉県
            </option>
            <option
              value="東京都"
            >
              東京都
            </option>
            <option
              value="神奈川県"
            >
              神奈川県
            </option>
            <option
              value="新潟県"
            >
              新潟県
            </option>
            <option
              value="富山県"
            >
              富山県
            </option>
            <option
              value="石川県"
            >
              石川県
            </option>
            <option
              value="福井県"
            >
              福井県
            </option>
            <option
              value="山梨県"
            >
              山梨県
            </option>
            <option
              value="長野県"
            >
              長野県
            </option>
            <option
              value="岐阜県"
            >
              岐阜県
            </option>
            <option
              value="静岡県"
            >
              静岡県
            </option>
            <option
              value="愛知県"
            >
              愛知県
            </option>
            <option
              value="三重県"
            >
              三重県
            </option>
            <option
              value="滋賀県"
            >
              滋賀県
            </option>
            <option
              value="京都府"
            >
              京都府
            </option>
            <option
              value="大阪府"
            >
              大阪府
            </option>
            <option
              value="兵庫県"
            >
              兵庫県
            </option>
            <option
              value="奈良県"
            >
              奈良県
            </option>
            <option
              value="和歌山県"
            >
              和歌山県
            </option>
            <option
              value="鳥取県"
            >
              鳥取県
            </option>
            <option
              value="島根県"
            >
              島根県
            </option>
            <option
              value="岡山県"
            >
              岡山県
            </option>
            <option
              value="広島県"
            >
              広島県
            </option>
            <option
              value="山口県"
            >
              山口県
            </option>
            <option
              value="徳島県"
            >
              徳島県
            </option>
            <option
              value="香川県"
            >
              香川県
            </option>
            <option
              value="愛媛県"
            >
              愛媛県
            </option>
            <option
              value="高知県"
            >
              高知県
            </option>
            <option
              value="福岡県"
            >
              福岡県
            </option>
            <option
              value="佐賀県"
            >
              佐賀県
            </option>
            <option
              value="長崎県"
            >
              長崎県
            </option>
            <option
              value="熊本県"
            >
              熊本県
            </option>
            <option
              value="大分県"
            >
              大分県
            </option>
            <option
              value="宮崎県"
            >
              宮崎県
            </option>
            <option
              value="鹿児島県"
            >
              鹿児島県
            </option>
            <option
              value="沖縄県"
            >
              沖縄県
            </option>
          </select>
          <input
            className="sc-kEYyzF eHDiL"
            onChange={[Function]}
            placeholder="図書館を検索..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="sc-bwzfXH kLBebE"
      >
        <ul
          className="sc-htoDjs jkpzWr"
        >
          <li
            className="sc-dnqmqq sc-dxgOiQ RsSl"
          >
            <div
              className="sc-bdVaJa cnQvIG"
              direction="row"
            >
              <div
                className="sc-bdVaJa beqaBA"
                direction="column"
              >
                <a
                  className="sc-iwsKbI sc-ckVGcZ gohago"
                  href="https://www.library.city.arakawa.tokyo.jp/"
                >
                  東京都荒川区
                </a>
                <div
                  className="sc-bZQynM sc-jKJlTe jZKENB"
                >
                  汐入図書SS, 町屋図書館
                </div>
              </div>
              <button
                className="sc-gZMcBi sc-eNQAEJ qxmAF"
                disabled={true}
              >
                登録済み
              </button>
            </div>
          </li>
          <li
            className="sc-dnqmqq sc-dxgOiQ RsSl"
          >
            <div
              className="sc-bdVaJa cnQvIG"
              direction="row"
            >
              <div
                className="sc-bdVaJa beqaBA"
                direction="column"
              >
                <a
                  className="sc-iwsKbI sc-ckVGcZ gohago"
                  href="http://www.lib.city.bunkyo.tokyo.jp/"
                >
                  東京都文京区
                </a>
                <div
                  className="sc-bZQynM sc-jKJlTe jZKENB"
                >
                  千石図書館, 小石川図書館
                </div>
              </div>
              <button
                className="sc-gZMcBi sc-eNQAEJ qxmAF"
                disabled={true}
              >
                登録済み
              </button>
            </div>
          </li>
          <li
            className="sc-dnqmqq sc-dxgOiQ RsSl"
          >
            <div
              className="sc-bdVaJa cnQvIG"
              direction="row"
            >
              <div
                className="sc-bdVaJa beqaBA"
                direction="column"
              >
                <a
                  className="sc-iwsKbI sc-ckVGcZ gohago"
                  href="http://www.kodomo.go.jp/"
                >
                  国立国会図書館
                </a>
                <div
                  className="sc-bZQynM sc-jKJlTe jZKENB"
                >
                  子ども図書館
                </div>
              </div>
              <button
                className="sc-gZMcBi sc-eNQAEJ cwlAve"
                onClick={[Function]}
              >
                登録
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots LibrarySearch|LibraryRegistrationPanel Initial State 1`] = `
<div
  className="sc-bdVaJa PpCBN"
  direction="row"
>
  <div
    className="sc-bwzfXH UFcNM"
  >
    <div
      className="sc-bdVaJa hoToyJ"
      direction="column"
    >
      <div
        className="sc-bwzfXH kLBebE"
      >
        <div
          className="sc-bdVaJa cnQvIG"
          direction="row"
        >
          <select
            className="sc-hMqMXs dBMuSP"
            onChange={[Function]}
            value="東京都"
          >
            <option
              value="北海道"
            >
              北海道
            </option>
            <option
              value="青森県"
            >
              青森県
            </option>
            <option
              value="岩手県"
            >
              岩手県
            </option>
            <option
              value="宮城県"
            >
              宮城県
            </option>
            <option
              value="秋田県"
            >
              秋田県
            </option>
            <option
              value="山形県"
            >
              山形県
            </option>
            <option
              value="福島県"
            >
              福島県
            </option>
            <option
              value="茨城県"
            >
              茨城県
            </option>
            <option
              value="栃木県"
            >
              栃木県
            </option>
            <option
              value="群馬県"
            >
              群馬県
            </option>
            <option
              value="埼玉県"
            >
              埼玉県
            </option>
            <option
              value="千葉県"
            >
              千葉県
            </option>
            <option
              value="東京都"
            >
              東京都
            </option>
            <option
              value="神奈川県"
            >
              神奈川県
            </option>
            <option
              value="新潟県"
            >
              新潟県
            </option>
            <option
              value="富山県"
            >
              富山県
            </option>
            <option
              value="石川県"
            >
              石川県
            </option>
            <option
              value="福井県"
            >
              福井県
            </option>
            <option
              value="山梨県"
            >
              山梨県
            </option>
            <option
              value="長野県"
            >
              長野県
            </option>
            <option
              value="岐阜県"
            >
              岐阜県
            </option>
            <option
              value="静岡県"
            >
              静岡県
            </option>
            <option
              value="愛知県"
            >
              愛知県
            </option>
            <option
              value="三重県"
            >
              三重県
            </option>
            <option
              value="滋賀県"
            >
              滋賀県
            </option>
            <option
              value="京都府"
            >
              京都府
            </option>
            <option
              value="大阪府"
            >
              大阪府
            </option>
            <option
              value="兵庫県"
            >
              兵庫県
            </option>
            <option
              value="奈良県"
            >
              奈良県
            </option>
            <option
              value="和歌山県"
            >
              和歌山県
            </option>
            <option
              value="鳥取県"
            >
              鳥取県
            </option>
            <option
              value="島根県"
            >
              島根県
            </option>
            <option
              value="岡山県"
            >
              岡山県
            </option>
            <option
              value="広島県"
            >
              広島県
            </option>
            <option
              value="山口県"
            >
              山口県
            </option>
            <option
              value="徳島県"
            >
              徳島県
            </option>
            <option
              value="香川県"
            >
              香川県
            </option>
            <option
              value="愛媛県"
            >
              愛媛県
            </option>
            <option
              value="高知県"
            >
              高知県
            </option>
            <option
              value="福岡県"
            >
              福岡県
            </option>
            <option
              value="佐賀県"
            >
              佐賀県
            </option>
            <option
              value="長崎県"
            >
              長崎県
            </option>
            <option
              value="熊本県"
            >
              熊本県
            </option>
            <option
              value="大分県"
            >
              大分県
            </option>
            <option
              value="宮崎県"
            >
              宮崎県
            </option>
            <option
              value="鹿児島県"
            >
              鹿児島県
            </option>
            <option
              value="沖縄県"
            >
              沖縄県
            </option>
          </select>
          <input
            className="sc-kEYyzF eHDiL"
            onChange={[Function]}
            placeholder="図書館を検索..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots LibrarySearch|LibraryRegistrationPanel Succeeded Registration 1`] = `
<div
  className="sc-bdVaJa PpCBN"
  direction="row"
>
  <div
    className="sc-bwzfXH UFcNM"
  >
    <div
      className="sc-bdVaJa hoToyJ"
      direction="column"
    >
      <div
        className="sc-bwzfXH kLBebE"
      >
        <div
          className="sc-bdVaJa cnQvIG"
          direction="row"
        >
          <select
            className="sc-hMqMXs dBMuSP"
            onChange={[Function]}
            value="東京都"
          >
            <option
              value="北海道"
            >
              北海道
            </option>
            <option
              value="青森県"
            >
              青森県
            </option>
            <option
              value="岩手県"
            >
              岩手県
            </option>
            <option
              value="宮城県"
            >
              宮城県
            </option>
            <option
              value="秋田県"
            >
              秋田県
            </option>
            <option
              value="山形県"
            >
              山形県
            </option>
            <option
              value="福島県"
            >
              福島県
            </option>
            <option
              value="茨城県"
            >
              茨城県
            </option>
            <option
              value="栃木県"
            >
              栃木県
            </option>
            <option
              value="群馬県"
            >
              群馬県
            </option>
            <option
              value="埼玉県"
            >
              埼玉県
            </option>
            <option
              value="千葉県"
            >
              千葉県
            </option>
            <option
              value="東京都"
            >
              東京都
            </option>
            <option
              value="神奈川県"
            >
              神奈川県
            </option>
            <option
              value="新潟県"
            >
              新潟県
            </option>
            <option
              value="富山県"
            >
              富山県
            </option>
            <option
              value="石川県"
            >
              石川県
            </option>
            <option
              value="福井県"
            >
              福井県
            </option>
            <option
              value="山梨県"
            >
              山梨県
            </option>
            <option
              value="長野県"
            >
              長野県
            </option>
            <option
              value="岐阜県"
            >
              岐阜県
            </option>
            <option
              value="静岡県"
            >
              静岡県
            </option>
            <option
              value="愛知県"
            >
              愛知県
            </option>
            <option
              value="三重県"
            >
              三重県
            </option>
            <option
              value="滋賀県"
            >
              滋賀県
            </option>
            <option
              value="京都府"
            >
              京都府
            </option>
            <option
              value="大阪府"
            >
              大阪府
            </option>
            <option
              value="兵庫県"
            >
              兵庫県
            </option>
            <option
              value="奈良県"
            >
              奈良県
            </option>
            <option
              value="和歌山県"
            >
              和歌山県
            </option>
            <option
              value="鳥取県"
            >
              鳥取県
            </option>
            <option
              value="島根県"
            >
              島根県
            </option>
            <option
              value="岡山県"
            >
              岡山県
            </option>
            <option
              value="広島県"
            >
              広島県
            </option>
            <option
              value="山口県"
            >
              山口県
            </option>
            <option
              value="徳島県"
            >
              徳島県
            </option>
            <option
              value="香川県"
            >
              香川県
            </option>
            <option
              value="愛媛県"
            >
              愛媛県
            </option>
            <option
              value="高知県"
            >
              高知県
            </option>
            <option
              value="福岡県"
            >
              福岡県
            </option>
            <option
              value="佐賀県"
            >
              佐賀県
            </option>
            <option
              value="長崎県"
            >
              長崎県
            </option>
            <option
              value="熊本県"
            >
              熊本県
            </option>
            <option
              value="大分県"
            >
              大分県
            </option>
            <option
              value="宮崎県"
            >
              宮崎県
            </option>
            <option
              value="鹿児島県"
            >
              鹿児島県
            </option>
            <option
              value="沖縄県"
            >
              沖縄県
            </option>
          </select>
          <input
            className="sc-kEYyzF eHDiL"
            onChange={[Function]}
            placeholder="図書館を検索..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="sc-bwzfXH kLBebE"
      >
        <ul
          className="sc-htoDjs jkpzWr"
        >
          <li
            className="sc-dnqmqq sc-dxgOiQ RsSl"
          >
            <div
              className="sc-bdVaJa cnQvIG"
              direction="row"
            >
              <div
                className="sc-bdVaJa beqaBA"
                direction="column"
              >
                <a
                  className="sc-iwsKbI sc-ckVGcZ gohago"
                  href="https://www.library.city.arakawa.tokyo.jp/"
                >
                  東京都荒川区
                </a>
                <div
                  className="sc-bZQynM sc-jKJlTe jZKENB"
                >
                  汐入図書SS, 町屋図書館
                </div>
              </div>
              <button
                className="sc-gZMcBi sc-eNQAEJ qxmAF"
                disabled={true}
              >
                登録済み
              </button>
            </div>
          </li>
          <li
            className="sc-dnqmqq sc-dxgOiQ RsSl"
          >
            <div
              className="sc-bdVaJa cnQvIG"
              direction="row"
            >
              <div
                className="sc-bdVaJa beqaBA"
                direction="column"
              >
                <a
                  className="sc-iwsKbI sc-ckVGcZ gohago"
                  href="http://www.lib.city.bunkyo.tokyo.jp/"
                >
                  東京都文京区
                </a>
                <div
                  className="sc-bZQynM sc-jKJlTe jZKENB"
                >
                  千石図書館, 小石川図書館
                </div>
              </div>
              <button
                className="sc-gZMcBi sc-eNQAEJ qxmAF"
                disabled={true}
              >
                登録済み
              </button>
            </div>
          </li>
          <li
            className="sc-dnqmqq sc-dxgOiQ RsSl"
          >
            <div
              className="sc-bdVaJa cnQvIG"
              direction="row"
            >
              <div
                className="sc-bdVaJa beqaBA"
                direction="column"
              >
                <a
                  className="sc-iwsKbI sc-ckVGcZ gohago"
                  href="http://www.kodomo.go.jp/"
                >
                  国立国会図書館
                </a>
                <div
                  className="sc-bZQynM sc-jKJlTe jZKENB"
                >
                  子ども図書館
                </div>
              </div>
              <button
                className="sc-gZMcBi sc-eNQAEJ cwlAve"
                onClick={[Function]}
              >
                登録
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots LibrarySearch|LibraryRegistrationPanelHeader Default Component 1`] = `
<div
  className="sc-bwzfXH kLBebE"
>
  <div
    className="sc-bdVaJa cnQvIG"
    direction="row"
  >
    <select
      className="sc-hMqMXs dBMuSP"
      onChange={[Function]}
      value="東京都"
    >
      <option
        value="北海道"
      >
        北海道
      </option>
      <option
        value="青森県"
      >
        青森県
      </option>
      <option
        value="岩手県"
      >
        岩手県
      </option>
      <option
        value="宮城県"
      >
        宮城県
      </option>
      <option
        value="秋田県"
      >
        秋田県
      </option>
      <option
        value="山形県"
      >
        山形県
      </option>
      <option
        value="福島県"
      >
        福島県
      </option>
      <option
        value="茨城県"
      >
        茨城県
      </option>
      <option
        value="栃木県"
      >
        栃木県
      </option>
      <option
        value="群馬県"
      >
        群馬県
      </option>
      <option
        value="埼玉県"
      >
        埼玉県
      </option>
      <option
        value="千葉県"
      >
        千葉県
      </option>
      <option
        value="東京都"
      >
        東京都
      </option>
      <option
        value="神奈川県"
      >
        神奈川県
      </option>
      <option
        value="新潟県"
      >
        新潟県
      </option>
      <option
        value="富山県"
      >
        富山県
      </option>
      <option
        value="石川県"
      >
        石川県
      </option>
      <option
        value="福井県"
      >
        福井県
      </option>
      <option
        value="山梨県"
      >
        山梨県
      </option>
      <option
        value="長野県"
      >
        長野県
      </option>
      <option
        value="岐阜県"
      >
        岐阜県
      </option>
      <option
        value="静岡県"
      >
        静岡県
      </option>
      <option
        value="愛知県"
      >
        愛知県
      </option>
      <option
        value="三重県"
      >
        三重県
      </option>
      <option
        value="滋賀県"
      >
        滋賀県
      </option>
      <option
        value="京都府"
      >
        京都府
      </option>
      <option
        value="大阪府"
      >
        大阪府
      </option>
      <option
        value="兵庫県"
      >
        兵庫県
      </option>
      <option
        value="奈良県"
      >
        奈良県
      </option>
      <option
        value="和歌山県"
      >
        和歌山県
      </option>
      <option
        value="鳥取県"
      >
        鳥取県
      </option>
      <option
        value="島根県"
      >
        島根県
      </option>
      <option
        value="岡山県"
      >
        岡山県
      </option>
      <option
        value="広島県"
      >
        広島県
      </option>
      <option
        value="山口県"
      >
        山口県
      </option>
      <option
        value="徳島県"
      >
        徳島県
      </option>
      <option
        value="香川県"
      >
        香川県
      </option>
      <option
        value="愛媛県"
      >
        愛媛県
      </option>
      <option
        value="高知県"
      >
        高知県
      </option>
      <option
        value="福岡県"
      >
        福岡県
      </option>
      <option
        value="佐賀県"
      >
        佐賀県
      </option>
      <option
        value="長崎県"
      >
        長崎県
      </option>
      <option
        value="熊本県"
      >
        熊本県
      </option>
      <option
        value="大分県"
      >
        大分県
      </option>
      <option
        value="宮崎県"
      >
        宮崎県
      </option>
      <option
        value="鹿児島県"
      >
        鹿児島県
      </option>
      <option
        value="沖縄県"
      >
        沖縄県
      </option>
    </select>
    <input
      className="sc-kEYyzF eHDiL"
      onChange={[Function]}
      placeholder="図書館を検索..."
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Navigation|NavigationPanel Default Component 1`] = `
<div
  className="sc-bwzfXH hbBCnx"
>
  <div
    className="sc-bdVaJa iBkUWf"
    direction="row"
  >
    <div
      className="sc-bdVaJa hoToyJ"
      direction="column"
    >
      <div
        className="sc-bZQynM sc-hSdWYo gDUBsy"
      >
        登録済みの図書館
      </div>
      <ul
        className="sc-htoDjs sc-gqjmRU iLgThu"
      >
        <li
          className="sc-dnqmqq sc-jTzLTM fiycnC"
        >
          <div
            className="sc-bdVaJa cnQvIG"
            direction="row"
          >
            <div
              className="sc-bdVaJa beqaBA"
              direction="column"
            >
              <a
                className="sc-iwsKbI sc-fjdhpX guXMWR"
                href="https://www.library.city.arakawa.tokyo.jp/"
                rel="noreferrer noopener"
                target="_blank"
              >
                東京都荒川区
              </a>
              <div
                className="sc-bZQynM sc-VigVT cPAGFW"
              >
                汐入図書SS, 町屋図書館
              </div>
            </div>
            <button
              className="sc-gZMcBi sc-jzJRlG eJgDZT"
              onClick={[Function]}
            >
              削除
            </button>
          </div>
        </li>
        <li
          className="sc-dnqmqq sc-jTzLTM fiycnC"
        >
          <div
            className="sc-bdVaJa cnQvIG"
            direction="row"
          >
            <div
              className="sc-bdVaJa beqaBA"
              direction="column"
            >
              <a
                className="sc-iwsKbI sc-fjdhpX guXMWR"
                href="http://www.lib.city.bunkyo.tokyo.jp/"
                rel="noreferrer noopener"
                target="_blank"
              >
                東京都文京区
              </a>
              <div
                className="sc-bZQynM sc-VigVT cPAGFW"
              >
                千石図書館, 小石川図書館
              </div>
            </div>
            <button
              className="sc-gZMcBi sc-jzJRlG eJgDZT"
              onClick={[Function]}
            >
              削除
            </button>
          </div>
        </li>
        <li
          className="sc-dnqmqq sc-jTzLTM fiycnC"
        >
          <div
            className="sc-bdVaJa cnQvIG"
            direction="row"
          >
            <div
              className="sc-bdVaJa beqaBA"
              direction="column"
            >
              <a
                className="sc-iwsKbI sc-fjdhpX guXMWR"
                href="http://www.kodomo.go.jp/"
                rel="noreferrer noopener"
                target="_blank"
              >
                国立国会図書館
              </a>
              <div
                className="sc-bZQynM sc-VigVT cPAGFW"
              >
                子ども図書館
              </div>
            </div>
            <button
              className="sc-gZMcBi sc-jzJRlG eJgDZT"
              onClick={[Function]}
            >
              削除
            </button>
          </div>
        </li>
      </ul>
      <a
        className="sc-iAyFgw ePRiUH"
        href="library-registration"
        onClick={[Function]}
      >
        図書館を登録
      </a>
    </div>
    <div
      className="sc-kkGfuU gnaiIk"
    />
  </div>
</div>
`;

exports[`Storyshots Navigation|NavigationPanel No Library 1`] = `
<div
  className="sc-bwzfXH hbBCnx"
>
  <div
    className="sc-bdVaJa iBkUWf"
    direction="row"
  >
    <div
      className="sc-bdVaJa hoToyJ"
      direction="column"
    >
      <div
        className="sc-bZQynM sc-hSdWYo gDUBsy"
      >
        登録済みの図書館
      </div>
      <div
        className="sc-bZQynM fkcafR"
      >
        図書館が登録されていません
      </div>
      <a
        className="sc-iAyFgw ePRiUH"
        href="library-registration"
        onClick={[Function]}
      >
        図書館を登録
      </a>
    </div>
    <div
      className="sc-kkGfuU gnaiIk"
    />
  </div>
</div>
`;

exports[`Storyshots Navigation|UserLibraryList Default Component 1`] = `
<ul
  className="sc-htoDjs sc-gqjmRU iLgThu"
>
  <li
    className="sc-dnqmqq sc-jTzLTM fiycnC"
  >
    <div
      className="sc-bdVaJa cnQvIG"
      direction="row"
    >
      <div
        className="sc-bdVaJa beqaBA"
        direction="column"
      >
        <a
          className="sc-iwsKbI sc-fjdhpX guXMWR"
          href="https://www.library.city.arakawa.tokyo.jp/"
          rel="noreferrer noopener"
          target="_blank"
        >
          東京都荒川区
        </a>
        <div
          className="sc-bZQynM sc-VigVT cPAGFW"
        >
          汐入図書SS, 町屋図書館
        </div>
      </div>
      <button
        className="sc-gZMcBi sc-jzJRlG eJgDZT"
        onClick={[Function]}
      >
        削除
      </button>
    </div>
  </li>
  <li
    className="sc-dnqmqq sc-jTzLTM fiycnC"
  >
    <div
      className="sc-bdVaJa cnQvIG"
      direction="row"
    >
      <div
        className="sc-bdVaJa beqaBA"
        direction="column"
      >
        <a
          className="sc-iwsKbI sc-fjdhpX guXMWR"
          href="http://www.lib.city.bunkyo.tokyo.jp/"
          rel="noreferrer noopener"
          target="_blank"
        >
          東京都文京区
        </a>
        <div
          className="sc-bZQynM sc-VigVT cPAGFW"
        >
          千石図書館, 小石川図書館
        </div>
      </div>
      <button
        className="sc-gZMcBi sc-jzJRlG eJgDZT"
        onClick={[Function]}
      >
        削除
      </button>
    </div>
  </li>
  <li
    className="sc-dnqmqq sc-jTzLTM fiycnC"
  >
    <div
      className="sc-bdVaJa cnQvIG"
      direction="row"
    >
      <div
        className="sc-bdVaJa beqaBA"
        direction="column"
      >
        <a
          className="sc-iwsKbI sc-fjdhpX guXMWR"
          href="http://www.kodomo.go.jp/"
          rel="noreferrer noopener"
          target="_blank"
        >
          国立国会図書館
        </a>
        <div
          className="sc-bZQynM sc-VigVT cPAGFW"
        >
          子ども図書館
        </div>
      </div>
      <button
        className="sc-gZMcBi sc-jzJRlG eJgDZT"
        onClick={[Function]}
      >
        削除
      </button>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Navigation|UserLibraryList No Library 1`] = `
<div
  className="sc-bZQynM fkcafR"
>
  図書館が登録されていません
</div>
`;

exports[`Storyshots Parts|Button Default Component 1`] = `
<button
  className="sc-gZMcBi hnfeMs"
>
  Button
</button>
`;

exports[`Storyshots Parts|Input Default Component 1`] = `
<input
  className="sc-kEYyzF eHDiL"
  onChange={[Function]}
  placeholder="キーワードを入力"
  type="text"
  value=""
/>
`;

exports[`Storyshots Parts|Link Default Component 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <a
    className="sc-iwsKbI gQaqPn"
    href="http://yahoo.co.jp"
  >
    Yahoo
  </a>
  <a
    className="sc-iwsKbI bFdQxV"
    href="http://yahoo.co.jp"
  >
    Yahoo
  </a>
</div>
`;

exports[`Storyshots Parts|List Default Component 1`] = `
<ul
  className="sc-htoDjs jkpzWr"
>
  <li
    className="sc-dnqmqq esxTgD"
  >
    item1
  </li>
  <li
    className="sc-dnqmqq esxTgD"
  >
    item2
  </li>
  <li
    className="sc-dnqmqq esxTgD"
  >
    item3
  </li>
</ul>
`;

exports[`Storyshots Parts|Loading Default Component 1`] = `
<div
  className="sc-bdVaJa cnQvIG"
  direction="row"
>
  <div
    className="loader"
  >
    Loading...
  </div>
</div>
`;

exports[`Storyshots Parts|Select Default Component 1`] = `
<select
  className="sc-hMqMXs GMJBG"
  onChange={[Function]}
  value=""
>
  <option
    value="value1"
  >
    label1
  </option>
  <option
    value="value2"
  >
    label2
  </option>
  <option
    value="value3"
  >
    label3
  </option>
</select>
`;

exports[`Storyshots Parts|Text Default Component 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="sc-bZQynM kXVlTG"
    fontSize="xlarge"
  >
    XLARGE Text
  </div>
  <div
    className="sc-bZQynM fSPhbp"
    fontSize="large"
  >
    LARGE Text
  </div>
  <div
    className="sc-bZQynM kEfXXe"
    fontSize="medium"
  >
    MEDIUM Text
  </div>
  <div
    className="sc-bZQynM gDdXMX"
  >
    BOLD Text
  </div>
</div>
`;

exports[`Storyshots Parts|Toast Default Component 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Show Toast
  </button>
  <div
    className="Toastify"
  />
</div>
`;
